# Chest

./: .clang-format  .gitignore  CMakeLists.txt  build_mac.sh  build_mac_debug.sh  main.cpp  readme.md
applications/: EditorApp.cpp  EditorApp.h  GameApp.cpp  GameApp.h
config/: game.json
core/: Entity.cpp  Entity.h
core/Components/: GUIWindowComponent.h  HealthComponent.h  IComponent.h  MapComponent.h  MapSectorComponent.h  PhysicsComponent.h  PositionComponent.h  RectPreviewComponent.h  RenderComponent.h  UIButtonComponent.h
events/: Events.h
factories/: ButtonFactory.cpp  ButtonFactory.h  PlayerFactory.cpp  PlayerFactory.h  WorldMapFactory.cpp  WorldMapFactory.h
managers/: CameraManager.h  DebugManager.h  EntityManager.h  EventManager.h  GUIManager.cpp  GUIManager.h  HIDManager.h  IManager.h  PhysicsManager.cpp  PhysicsManager.h  ResourceManager.h  TimeManager.h  ToolStateManager.h  WindowManager.h
services/: GameConfig.cpp  GameConfig.h  MapLoader.cpp  MapLoader.h
systems/: ButtonSystem.h  CameraSystem.cpp  CameraSystem.h  DebugSystem.cpp  DebugSystem.h  EntityControlSystem.h  EventSystem.h  GUIRenderSystem.cpp  GUIRenderSystem.h  GUISystem.h  HIDSystem.h  ISystem.h  OverlayRenderSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  RenderSystemUI.h  SystemSignal.h  TimeSystem.h  ToolSystem.cpp  ToolSystem.h  WindowEventSystem.cpp  WindowEventSystem.h
utils/: Constants.h  CoordinateUtils.h  MapSectorData.cpp  MapSectorData.h  PhysicBodyDef.h  Vec2.h
